--- a/SideCar.Tests/SideCar.Tests.csproj
+++ b/SideCar.Tests/SideCar.Tests.csproj
@@ -28,4 +28,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SideCar\SideCar.csproj" />
+    </ItemGroup>
+
 </Project>
