Moving redis implementation into it's own library

--- a/SideCar.Tests/SideCar.Tests.csproj
+++ b/SideCar.Tests/SideCar.Tests.csproj
@@ -29,6 +29,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SideCar.Redis\SideCar.Redis.csproj" />
       <ProjectReference Include="..\SideCar\SideCar.csproj" />
     </ItemGroup>
 
