--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SideCar.Redis\SideCar.Redis.csproj" />
       <ProjectReference Include="..\SideCar\SideCar.csproj" />
     </ItemGroup>
 
